refactor: 멤버 조회 DTO from 메서드 생성 및 memberRole, memberType 추가